fix text overflow on cards

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,8 @@
     -webkit-text-stroke: 1px #3b4cca;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
-    padding: 0.2rem;
+    padding: 0.3rem;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-height: 2rem;
 }
